kubernetes/apps/tiny/external-services/wanda.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wanda-k8s
  namespace: external-services
spec:
  type: ExternalName
  ports:
    - name: https
      port: 443
  externalName: 10.151.15.50
---
apiVersion: v1
kind: Service
metadata:
  name: wanda-proxmox
  namespace: external-services
spec:
  type: ExternalName
  ports:
    - name: proxmox
      port: 443
      targetPort: 8006
  externalName: 10.151.14.11
---
apiVersion: v1
kind: Service
metadata:
  name: wanda-mgmt
  namespace: external-services
spec:
  type: ExternalName
  ports:
    - name: https
      port: 443
  externalName: 10.151.14.10
---
apiVersion: v1
kind: Service
metadata:
  name: storage
  namespace: external-services
spec:
  type: ExternalName
  ports:
    - name: https
      port: 443
  externalName: 10.151.14.15
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wanda-proxmox
  namespace: external-services
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`proxmox.heimelska.co.uk`)
      kind: Rule
      services:
        - name: wanda-proxmox
          port: 8006
          scheme: https
  tls:
    secretName: wanda-proxmox-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wanda-mgmt
  namespace: external-services
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`wanda-mgmt.heimelska.co.uk`)
      kind: Rule
      services:
        - name: wanda-mgmt
          port: 443
  tls:
    secretName: wanda-mgmt-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: storage
  namespace: external-services
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`storage.heimelska.co.uk`)
      kind: Rule
      services:
        - name: storage
          port: 443
  tls:
    secretName: storage-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: external-services
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.heimelska.co.uk`)
      kind: Rule
      services:
        - name: wanda-k8s
          port: 443
  tls:
    secretName: sonarr-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: external-services
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.heimelska.co.uk`)
      kind: Rule
      services:
        - name: wanda-k8s
          port: 443
  tls:
    secretName: radarr-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sabnzbd
  namespace: external-services
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dl.heimelska.co.uk`)
      kind: Rule
      services:
        - name: wanda-k8s
          port: 443
  tls:
    secretName: sabnzbd-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plex
  namespace: external-services
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`plex.bancey.xyz`)
      kind: Rule
      services:
        - name: wanda-k8s
          port: 443
  tls:
    secretName: plex-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wanda-capacitor
  namespace: external-services
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`flux-capacitor.wanda.heimelska.co.uk`)
      kind: Rule
      services:
        - name: wanda-k8s
          port: 443
  tls:
    secretName: wanda-capacitor-tls
